Day-2_K8s_core_objects/6-ingress/article-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-api

spec:
  selector:
    matchLabels:
      app: article-api

  replicas: 2

  template:
    metadata:
      labels:
        app: article-api

    spec:
      containers:
        - image: "europe-west1-docker.pkg.dev/wsc-kubernetes-training-0/microservices-demo/article-service:2.0"
          name: "article-api"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 8080
              path: /healthz
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthz

---
apiVersion: v1
kind: Service
metadata:
  name: article-api

spec:
  type: ClusterIP
  selector:
    app: article-api
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
...
