Day-2_K8s_core_objects/6-ingress/admin.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: article

spec:
  rules:

  - http:
      paths:

      - path: /
        pathType: Prefix
      # TODO: Complete
